# mae263a

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: doodlebot_gazebo.launch  doodlebot_rviz.launch  doodlebot_upload.launch
meshes/: chain_link1.stl  chain_link2.stl  chain_link3.stl  chain_link4.stl  chain_link5.stl
tooling/: FK.m  IK.m  animation.m  main.m  workspace_analysis.m
urdf/: doodlebot.urdf  doodlebot.urdf.xacro  doodlebot_robot.urdf.xacro
